# PSX

./: .clang-format  .gitignore  CMakeLists.txt  build.bat  fetch_sources.py  setup.bat  to-do.txt
data/shaders/: affine_texture_mapping.json  screen_rendering.json
data/shaders/fragment/: affine_texture_mapping.frag  screen_rendering.frag
data/shaders/vertex/: affine_texture_mapping.vert  screen_rendering.vert
src/: CMakeLists.txt  Component.cpp  Component.inl  GameObject.cpp  GameObject.hpp  GameObjectManager.cpp  GameObjectManager.hpp  HierarchyManager.cpp  HierarchyManager.hpp  InputManager.hpp  JSONUtils.cpp  JSONUtils.hpp  LogicComponent.cpp  LogicSystem.cpp  LogicSystem.hpp  Model.cpp  Model.hpp  ResourceManager.hpp  ResourceManager.inl  Rotation.cpp  ShaderProgram.cpp  Singleton.hpp  Texture.cpp  Texture.hpp  TransformationComponent.cpp  TransformationComponent.hpp  main.cpp  new_files.bat
src/Components/: Component.cpp  Component.hpp  Component.inl  LogicComponent.hpp  LogicSystem.hpp
src/GameObject/: GameObject.cpp  GameObject.hpp  GameObject.inl  GameObjectManager.cpp  GameObjectManager.hpp
src/Input/: InputManager.cpp  InputManager.hpp
src/Resources/: Model.cpp  ResourceManager.cpp  ResourceManager.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Vertex.hpp
src/Transformation/: HierarchyManager.cpp  HierarchyManager.hpp  Rotation.hpp  Transformation.cpp  Transformation.hpp  TransformationComponent.cpp  TransformationComponent.hpp
src/Utils/: Singleton.inl
